--- a/medicalRecords.html
+++ b/medicalRecords.html
@@ -12,6 +12,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./createRecords.css" />
+    <link rel="stylesheet" href="./medicalrecords.css" />
 
     <title>ZLG | Medical Records</title>
     <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
@@ -131,7 +132,7 @@
     <!-- End of footer -->
 
     <script src="script.js"></script>
-    <script src="./createRecords.js"></script>
+    <script src="./getMedicalRecords.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
