--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
         </form>
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
-        <a href="#" class="notification">
-          <i class="bx bxs-bell"></i>
-          <span class="num">8</span>
-        </a>
+
         <a href="#" class="profile">
           <img src="img/people.png" />
         </a>
@@ -94,132 +91,38 @@
       <main>
         <div class="head-title">
           <div class="left">
-            <h1>Medical Clients</h1>
+            <h1>ZLG Dashboard</h1>
             <ul class="breadcrumb">
               <li>
                 <a href="#">Dashboard</a>
               </li>
             </ul>
           </div>
-          <a href="#" class="btn-download">
-            <i class="bx bxs-cloud-download"></i>
-            <span class="text">Download PDF</span>
-          </a>
         </div>
 
         <ul class="box-info">
           <li>
             <i class="bx bxs-calendar-check"></i>
             <span class="text">
-              <h3>1020</h3>
-              <p>New Order</p>
+              <h3></h3>
+              <p>Men</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-group"></i>
             <span class="text">
-              <h3>2834</h3>
-              <p>Visitors</p>
+              <h3></h3>
+              <p>Women</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-dollar-circle"></i>
             <span class="text">
-              <h3>N250,043</h3>
-              <p>Total Sales</p>
+              <h3></h3>
+              <p>Total Records</p>
             </span>
           </li>
         </ul>
-
-        <div class="table-data">
-          <div class="order">
-            <div class="head">
-              <h3>Recent Orders</h3>
-              <i class="bx bx-search"></i>
-              <i class="bx bx-filter"></i>
-            </div>
-            <table>
-              <thead>
-                <tr>
-                  <th>User</th>
-                  <th>Date Order</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>
-                    <img src="img/people.png" />
-                    <p>John Peters</p>
-                  </td>
-                  <td>01-10-2018</td>
-                  <td><span class="status completed">Completed</span></td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="img/people.png" />
-                    <p>Jennifer Agile</p>
-                  </td>
-                  <td>01-10-2018</td>
-                  <td><span class="status pending">Pending</span></td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="img/people.png" />
-                    <p>Precious Smith</p>
-                  </td>
-                  <td>01-10-2018</td>
-                  <td><span class="status process">Process</span></td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="img/people.png" />
-                    <p>Zoe Smith</p>
-                  </td>
-                  <td>01-10-2018</td>
-                  <td><span class="status pending">Pending</span></td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="img/people.png" />
-                    <p>Rob Obama</p>
-                  </td>
-                  <td>01-10-2018</td>
-                  <td><span class="status completed">Completed</span></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="todo">
-            <div class="head">
-              <h3>Todos</h3>
-              <i class="bx bx-plus"></i>
-              <i class="bx bx-filter"></i>
-            </div>
-            <ul class="todo-list">
-              <li class="completed">
-                <p>Todo List</p>
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </li>
-              <li class="completed">
-                <p>Todo List</p>
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </li>
-              <li class="not-completed">
-                <p>Todo List</p>
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </li>
-              <li class="completed">
-                <p>Todo List</p>
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </li>
-              <li class="not-completed">
-                <p>Todo List</p>
-                <i class="bx bx-dots-vertical-rounded"></i>
-              </li>
-            </ul>
-          </div>
-        </div>
       </main>
       <!-- MAIN -->
     </section>
