--- a/medicalRecords.html
+++ b/medicalRecords.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <!-- My CSS -->
+    <style></style>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./createRecords.css" />
     <link rel="stylesheet" href="./medicalrecords.css" />
@@ -82,10 +83,7 @@
         </form>
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
-        <a href="#" class="notification">
-          <i class="bx bxs-bell"></i>
-          <span class="num">8</span>
-        </a>
+
         <a href="#" class="profile">
           <img src="img/people.png" />
         </a>
@@ -103,18 +101,30 @@
               </li>
             </ul>
           </div>
-          <a href="#" class="btn-download">
-            <i class="bx bxs-cloud-download"></i>
-            <span class="text">Download PDF</span>
-          </a>
         </div>
 
         <div class="table-data">
           <div class="order">
             <div class="head">
-              <h3>Input Patient Records</h3>
+              <h3>Patient Records</h3>
             </div>
-            <div class="record_list"></div>
+            <div class="record_list">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Sex</th>
+                    <th>Phone Number</th>
+                    <th>Address</th>
+                    <th>Marital Status</th>
+                    <th>Next of Kin</th>
+                    <th>Next of Kin Phone Number</th>
+                  </tr>
+                </thead>
+                <tbody id="record_list"></tbody>
+              </table>
+            </div>
           </div>
         </div>
       </main>
@@ -132,6 +142,7 @@
     <!-- End of footer -->
 
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.2/pdfmake.min.js"></script>
     <script src="./getMedicalRecords.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
